# OOP-final-project

./: CMakeLists.txt  LICENSE  README.md
biblioteka/: CMakeLists.txt
biblioteka/include/model/: Address.hpp  Client.hpp  ClientType.hpp  ClientsManager.hpp  Company.hpp  Device.hpp  Individual.hpp  Item.hpp  ItemException.hpp  ItemsManager.hpp  Laptop.hpp  ManagerException.hpp  Order.hpp  OrdersManager.hpp  Phone.hpp  Repository.hpp  RepositoryException.hpp  Service.hpp  Tablet.hpp  TechSupport.hpp  Warranty.hpp
biblioteka/src/model/: Address.cpp  Client.cpp  ClientType.cpp  ClientsManager.cpp  Company.cpp  Device.cpp  Individual.cpp  Item.cpp  ItemException.cpp  ItemsManager.cpp  Laptop.cpp  ManagerException.cpp  Order.cpp  OrdersManager.cpp  Phone.cpp  RepositoryException.cpp  Service.cpp  Tablet.cpp  TechSupport.cpp  Warranty.cpp
biblioteka/test/: AddressTest.cpp  ClientTest.cpp  ClientsManagerTest.cpp  CompanyTest.cpp  DeviceTest.cpp  IndividualTest.cpp  ItemTest.cpp  ItemsManagerTest.cpp  LaptopTest.cpp  OrderTest.cpp  OrdersManagerTest.cpp  PhoneTest.cpp  RepositoryTest.cpp  ServiceTest.cpp  TabletTest.cpp  TechSupportTest.cpp  WarrantyTest.cpp  master.cpp
program/: CMakeLists.txt
program/src/: main.cpp
